--- a/index.html
+++ b/index.html
@@ -1,39 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="HandheldFriendly" content="true">
+
   <title>curtbrown.ca</title>
   <link href='https://fonts.googleapis.com/css?family=Lora:400,400italic,700|Oswald:300' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
- <header>
-   <img src="images/cb-logo.svg" width="100" id="logo" alt="">
-   <p>Hi. My name is Curt Brown. I'm a designer and front-end developer currently living in Kitchener, Ontario, Canada.</p>
- </header>
- <div class="row">
-   <div class="summary">
-     <h2>Malton Seventh-day Adventist Church</h2>
-     <h3>Branding &#8226; Web Design</h3>
-     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, assumenda dolorem doloremque adipisci quis at!</p>
-     <p>Nihil voluptate reprehenderit error iste similique asperiores dicta corporis quia dolore enim ducimus, maiores ut.</p>
-     <p>Velit adipisci quos expedita rem, doloremque similique, aperiam numquam ipsum ex, consectetur explicabo, voluptatum! Dolorem!</p>
-   </div>
-   <div class="graphics">
-     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit quasi magni, beatae tenetur obcaecati quibusdam, quod? Adipisci aliquid quidem, perspiciatis?</p>
-   </div>
-   <div class="clearfix"></div>
- </div>
- <div class="row">
-   <div class="summary">
-     <h2>Humber College</h2>
-     <h3>Graphic Design &#8226; Social &#8226; UX</h3>
-   </div>
-   <div class="graphics">
-     <img src="images/foursquare-banner.jpg" alt="">
-   </div>
- </div>
- <div class="row"></div>
-  
+  <header>
+    <img src="images/cb-logo.svg" width="100" id="logo" alt="">
+    <p>Hi. My name is Curt Brown. I'm a designer and front-end developer currently living in Kitchener, Ontario, Canada.</p>
+  </header>
+  <div class="row">
+    <div class="summary">
+      <h2>Malton Seventh-day Adventist Church</h2>
+      <h3>Branding &#8226; Web Design</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, assumenda dolorem doloremque adipisci quis at!</p>
+      <p>Nihil voluptate reprehenderit error iste similique asperiores dicta corporis quia dolore enim ducimus, maiores ut.</p>
+      <p>Velit adipisci quos expedita rem, doloremque similique, aperiam numquam ipsum ex, consectetur explicabo, voluptatum! Dolorem!</p>
+    </div>
+    <div class="graphics">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit quasi magni, beatae tenetur obcaecati quibusdam, quod? Adipisci aliquid quidem, perspiciatis?</p>
+      <img src="images/malton.png" alt="">
+    </div>
+    <div class="clearfix"></div>
+  </div>
+  <div class="row">
+    <div class="summary">
+      <h2>Humber College</h2>
+      <h3>Graphic Design &#8226; Social &#8226; UX</h3>
+    </div>
+    <div class="graphics">
+      <img src="images/foursquare-banner.jpg" alt="">
+    </div>
+  </div>
+  <div class="row"></div>
+
 </body>
+
 </html>
