--- a/index.html
+++ b/index.html
@@ -21,13 +21,35 @@
     <div class="summary">
       <h2>Malton Seventh-day Adventist Church</h2>
       <h3>Branding &#8226; Web Design</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, assumenda dolorem doloremque adipisci quis at!</p>
-      <p>Nihil voluptate reprehenderit error iste similique asperiores dicta corporis quia dolore enim ducimus, maiores ut.</p>
-      <p>Velit adipisci quos expedita rem, doloremque similique, aperiam numquam ipsum ex, consectetur explicabo, voluptatum! Dolorem!</p>
+      <p>This project was consisted of a website design and the creation of a visual identity for a local church. The redesign coincided with the church's 35th anniversary.</p>
+
+      <h4>Key Objectives</h4>
+      <ul>
+        <li>Understand what the church currently means to members and the community</li>
+        <li>Create a professional and consistent visual identity</li>
+      </ul>
+
     </div>
     <div class="graphics">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit quasi magni, beatae tenetur obcaecati quibusdam, quod? Adipisci aliquid quidem, perspiciatis?</p>
-      <img src="images/malton.png" alt="">
+      <figure>
+        <img src="images/MaltonIdentity.png" alt="">
+        <figcaption>
+          <p><em>Above</em>: The intitial concept for the lettermark and the finished product.</p>
+          <p>Malton SDA's slogan for the year, "From Victory to Victory", a reference to the first building the congregation worshipped in, and the name of their inter-church sports teams, is encapsulated in the <em>V</em>.</p>
+        </figcaption>
+      </figure>
+      <figure>
+        <figcaption>
+        </figcaption>
+        <img src="images/MaltonIdentity2.png" alt="">
+        <p><em>Above:</em> The lettermark and wordmark displayed horizontally and stacked.</p>
+      </figure>
+      <figure>
+        <img src="images/malton.png" alt="">
+        <figcaption>
+          <p>Homepage of <a href="maltonsda.com" target="_blank">maltonsda.com</a>.</p>
+        </figcaption>
+      </figure>
     </div>
     <div class="clearfix"></div>
   </div>
@@ -35,12 +57,25 @@
     <div class="summary">
       <h2>Humber College</h2>
       <h3>Graphic Design &#8226; Social &#8226; UX</h3>
+      <p>While I was working at Humber College, Humber's leadership wanted to make an effort to get students that received early offers of admission to accept their offers sooner.</p>
+      <p>To contribute to this endeavour, I used social media to engage with these students and get them excited about attending Humber. With the help of the Student Recruitment department I created a short video encouraging potential students to show how excited they were about receiving their acceptance letters.</p>
     </div>
     <div class="graphics">
-      <img src="images/foursquare-banner.jpg" alt="">
+      <figure>
+        <iframe src="https://player.vimeo.com/video/77659570" width="500" height="320" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </figure>
+      <figure>
+        <img src="images/submissions.jpg" alt="">
+        <figcaption>
+          <p>Within a few days of posting this video on the Humber Facebook page, students posted dozens of pictures, and even we even received a few videos.
+          </p>
+        </figcaption>
+      </figure>
+
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/09lzC1j8AqU" frameborder="0" allowfullscreen></iframe>
     </div>
+    <div class="clearfix"></div>
   </div>
-  <div class="row"></div>
 
 </body>
 
