--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <figure>
         <img src="images/malton.png" alt="">
         <figcaption>
-          <p>Homepage of <a href="maltonsda.com" target="_blank">maltonsda.com</a>.</p>
+          <p>Homepage of <a href="http://maltonsda.com" target="_blank">maltonsda.com</a>.</p>
         </figcaption>
       </figure>
     </div>
