--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
   <title>curtbrown.ca</title>
   <link href='https://fonts.googleapis.com/css?family=Lora:400,400italic,700|Oswald:300' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="styles.css">
+
+  <link rel="apple-touch-icon" sizes="57x57" href="images/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="images/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="images/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="images/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="images/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="images/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="images/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="images/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="images/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+  <link rel="manifest" href="images/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="images/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -18,6 +36,7 @@
     <p>Hi. My name is Curt Brown. I'm a designer and front-end developer currently living in Kitchener, Ontario, Canada.</p>
   </header>
   <div class="row">
+
     <div class="summary">
       <h2>Malton Seventh-day Adventist Church</h2>
       <h3>Branding &#8226; Web Design</h3>
@@ -28,8 +47,8 @@
         <li>Understand what the church currently means to members and the community</li>
         <li>Create a professional and consistent visual identity</li>
       </ul>
-
     </div>
+
     <div class="graphics">
       <figure>
         <img src="images/MaltonIdentity.png" alt="">
