--- a/rogers/two/course_03/module_01/01.html
+++ b/rogers/two/course_03/module_01/01.html
@@ -61,7 +61,7 @@
       <!-- END Footer -->
     </div>
   </div>
-  <div id="learning-objective">
+  <!-- <div id="learning-objective">
     <div class="row">
       <div class="col-sm-12"><button class="col-xs-12 btn-2 btn-lg neutral-two-font" type="button" data-toggle="collapse" data-target="#demo2"> Learning Objective </button></div>
     </div>
@@ -74,7 +74,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- jQuery (necessary for Bootstrap JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
